[tool.poetry]
name = "commai-calb-challenge"
version = "0.1.0"
description = ""
authors = ["will and chris"]
readme = "README.md"
packages = [{include = "commai_calb_challenge"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
